# JaQ

./: README.md
CADFiles/: PrintableBottomShell.stl  PrintableCalibrationStand.stl  PrintableCenterFrontFrame.stl  PrintableKneeMountEven.stl  PrintableKneeMountOdd.stl  PrintableShoulderMountEven.stl  PrintableShoulderMountOdd.stl  PrintableSideStringer.stl  PrintableTopBottomStringer.stl  PrintableTopShell.stl  prusa_slicer_config.ini  sts3215.FCStd
DesktopApp/: CMakeLists.txt  JQBot.cpp  JQBot.h  JQLeg.cpp  JQLeg.h  JQMisc.cpp  JQMisc.h  JQServo.cpp  JQServo.h  JQServoController.h  Jaq.cpp  Jaq.h  JaqUI.cxx  JaqUI.fl  JaqUI.h  SCServo.cpp  SCServo.h
